# bes2600_sdk

./: .gitignore  Makefile  README.md  build.sh  build_compressed_ota.sh  clean.sh  lst_build.sh  ota_build.sh  pax_global_header  rebuild.sh
apps/: Makefile
config/: Makefile  common.mk
platform/: Makefile
platform/cmsis/NN_Lib/ConvolutionFunctions/: CMakeLists.txt  Makefile  arm_convolve_1x1_HCW.c  arm_convolve_1x1_HWC_q15_q7_q31.c  arm_depthwise_separable_conv2x4_q15_q7_q31.c  arm_depthwise_transposed_conv_1x4_HCW.c  arm_depthwise_transposedconv_2x4_q15_q7.c
rtos/: Makefile
scripts/: build.mk  clean.mk  extrawarn.mk  include.mk  lib.mk  submods.mk  submods_init.mk
services/: Makefile
stdf/: Makefile
tools/: build_compressed_ota.sh  generate_crc32_of_image.py  generate_py3_crc32_of_image.py  x000
tws_user_sdk/: Makefile  xOS_App.c  xOS_App.h  xOS_Event.c  xOS_Event.h  xOS_PT.c  xOS_PT.h  xOS_Parame_Configure.h  xOS_State.c  xOS_State.h  xOS_Timer.c  xOS_Timer.h
xos_SDK/: Makefile  readme.txt  xOS_App.c  xOS_App.h  xOS_Common.c  xOS_Common.h  xOS_Key.c  xOS_Key.h  xOS_Parame_Configure.h  xOS_State.c  xOS_State.h  xOS_Timer.c  xOS_Timer.h  xOS_bsp_box.c  xOS_bsp_box.h  xOS_list.c  xOS_list.h  xOS_typedef.h  xOS_ui_box.c  xOS_ui_box.h  xOS_ui_bsp_wear.h  xOS_ui_cover.c  xOS_ui_cover.h  xOS_ui_shell.c  xOS_ui_shell.h  xOS_ui_wear.c  xOS_ui_wear.h  xlog.c  xlog.h  xlog_flash.c  xlog_flash.h  xos_bsp_wear.c  xos_bsp_wear.h  xos_intterrupt_handler.c  xos_intterrupt_handler.h  xos_led.c  xos_led.h  xos_linux_list.c  xos_linux_list.h  xos_mem.c  (+12 more)
(+2187 files in other folders)
